[package]
name = "resy-notifies"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "Tool exposing simple CRUD interface for Resy's notification system"

[dependencies]
libresy = { version = "0.1.0", path = "../libresy" }
clap = { version = "4.5.19", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.2"
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
chrono = "0.4.38"
